slave/build/log/idf_py_stdout_output_9252
[1/9] Performing build step for 'bootloader'
[1/1] cmd.exe /C "cd /D C:\Users\guill\OneDrive\Documents\firmware_updater_updated_repo\slave_init_bo\slave\build\bootloader\esp-idf\esptool_py && C:\Espressif\python_env\idf5.0_py3.10_env\Scripts\python.exe C:/Espressif/frameworks/esp-idf-v5.0.1/components/partition_table/check_sizes.py --offset 0x8000 bootloader 0x1000 C:/Users/guill/OneDrive/Documents/firmware_updater_updated_repo/slave_init_bo/slave/build/bootloader/bootloader.bin"
Bootloader binary size 0x6700 bytes. 0x900 bytes (8%) free.
[2/7] Building C object esp-idf/canopennodeesp32/CMakeFiles/__idf_canopennodeesp32.dir/CANopen_LSS.c.obj
FAILED: esp-idf/canopennodeesp32/CMakeFiles/__idf_canopennodeesp32.dir/CANopen_LSS.c.obj 
ccache C:\Espressif\tools\xtensa-esp32-elf\esp-2022r1-11.2.0\xtensa-esp32-elf\bin\xtensa-esp32-elf-gcc.exe  -IC:/Users/guill/OneDrive/Documents/firmware_updater_updated_repo/slave_init_bo/slave/build/config -IC:/Users/guill/OneDrive/Documents/firmware_updater_updated_repo/slave_init_bo/slave/components/canopennodeesp32 -IC:/Users/guill/OneDrive/Documents/firmware_updater_updated_repo/slave_init_bo/slave/components/canopennodeesp32/301 -IC:/Users/guill/OneDrive/Documents/firmware_updater_updated_repo/slave_init_bo/slave/components/canopennodeesp32/303 -IC:/Users/guill/OneDrive/Documents/firmware_updater_updated_repo/slave_init_bo/slave/components/canopennodeesp32/304 -IC:/Users/guill/OneDrive/Documents/firmware_updater_updated_repo/slave_init_bo/slave/components/canopennodeesp32/305 -IC:/Users/guill/OneDrive/Documents/firmware_updater_updated_repo/slave_init_bo/slave/components/canopennodeesp32/309 -IC:/Users/guill/OneDrive/Documents/firmware_updater_updated_repo/slave_init_bo/slave/components/canopennodeesp32/storage -IC:/Users/guill/OneDrive/Documents/firmware_updater_updated_repo/slave_init_bo/slave/components/canopennodeesp32/extra -IC:/Users/guill/OneDrive/Documents/firmware_updater_updated_repo/slave_init_bo/slave/components/canopennodeesp32/example -IC:/Espressif/frameworks/esp-idf-v5.0.1/components/newlib/platform_include -IC:/Espressif/frameworks/esp-idf-v5.0.1/components/freertos/FreeRTOS-Kernel/include -IC:/Espressif/frameworks/esp-idf-v5.0.1/components/freertos/esp_additions/include/freertos -IC:/Espressif/frameworks/esp-idf-v5.0.1/components/freertos/FreeRTOS-Kernel/portable/xtensa/include -IC:/Espressif/frameworks/esp-idf-v5.0.1/components/freertos/esp_additions/include -IC:/Espressif/frameworks/esp-idf-v5.0.1/components/esp_hw_support/include -IC:/Espressif/frameworks/esp-idf-v5.0.1/components/esp_hw_support/include/soc -IC:/Espressif/frameworks/esp-idf-v5.0.1/components/esp_hw_support/include/soc/esp32 -IC:/Espressif/frameworks/esp-idf-v5.0.1/components/esp_hw_support/port/esp32/. -IC:/Espressif/frameworks/esp-idf-v5.0.1/components/esp_hw_support/port/esp32/private_include -IC:/Espressif/frameworks/esp-idf-v5.0.1/components/heap/include -IC:/Espressif/frameworks/esp-idf-v5.0.1/components/log/include -IC:/Espressif/frameworks/esp-idf-v5.0.1/components/soc/include -IC:/Espressif/frameworks/esp-idf-v5.0.1/components/soc/esp32/. -IC:/Espressif/frameworks/esp-idf-v5.0.1/components/soc/esp32/include -IC:/Espressif/frameworks/esp-idf-v5.0.1/components/hal/esp32/include -IC:/Espressif/frameworks/esp-idf-v5.0.1/components/hal/include -IC:/Espressif/frameworks/esp-idf-v5.0.1/components/hal/platform_port/include -IC:/Espressif/frameworks/esp-idf-v5.0.1/components/esp_rom/include -IC:/Espressif/frameworks/esp-idf-v5.0.1/components/esp_rom/include/esp32 -IC:/Espressif/frameworks/esp-idf-v5.0.1/components/esp_rom/esp32 -IC:/Espressif/frameworks/esp-idf-v5.0.1/components/esp_common/include -IC:/Espressif/frameworks/esp-idf-v5.0.1/components/esp_system/include -IC:/Espressif/frameworks/esp-idf-v5.0.1/components/esp_system/port/soc -IC:/Espressif/frameworks/esp-idf-v5.0.1/components/esp_system/port/include/private -IC:/Espressif/frameworks/esp-idf-v5.0.1/components/xtensa/include -IC:/Espressif/frameworks/esp-idf-v5.0.1/components/xtensa/esp32/include -IC:/Espressif/frameworks/esp-idf-v5.0.1/components/lwip/include -IC:/Espressif/frameworks/esp-idf-v5.0.1/components/lwip/include/apps -IC:/Espressif/frameworks/esp-idf-v5.0.1/components/lwip/include/apps/sntp -IC:/Espressif/frameworks/esp-idf-v5.0.1/components/lwip/lwip/src/include -IC:/Espressif/frameworks/esp-idf-v5.0.1/components/lwip/port/esp32/include -IC:/Espressif/frameworks/esp-idf-v5.0.1/components/lwip/port/esp32/include/arch -IC:/Espressif/frameworks/esp-idf-v5.0.1/components/driver/include -IC:/Espressif/frameworks/esp-idf-v5.0.1/components/driver/deprecated -IC:/Espressif/frameworks/esp-idf-v5.0.1/components/driver/esp32/include -IC:/Espressif/frameworks/esp-idf-v5.0.1/components/esp_pm/include -IC:/Espressif/frameworks/esp-idf-v5.0.1/components/esp_ringbuf/include -IC:/Espressif/frameworks/esp-idf-v5.0.1/components/esp_timer/include -IC:/Espressif/frameworks/esp-idf-v5.0.1/components/nvs_flash/include -IC:/Espressif/frameworks/esp-idf-v5.0.1/components/esp_partition/include -mlongcalls -Wno-frame-address  -fdiagnostics-color=always -ffunction-sections -fdata-sections -Wall -Werror=all -Wno-error=unused-function -Wno-error=unused-variable -Wno-error=deprecated-declarations -Wextra -Wno-unused-parameter -Wno-sign-compare -Wno-enum-conversion -gdwarf-4 -ggdb -Og -fmacro-prefix-map=C:/Users/guill/OneDrive/Documents/firmware_updater_updated_repo/slave_init_bo/slave=. -fmacro-prefix-map=C:/Espressif/frameworks/esp-idf-v5.0.1=/IDF -fstrict-volatile-bitfields -Wno-error=unused-but-set-variable -fno-jump-tables -fno-tree-switch-conversion -DconfigENABLE_FREERTOS_DEBUG_OCDAWARE=1 -std=gnu17 -Wno-old-style-declaration -D_GNU_SOURCE -DIDF_VER=\"v5.0.1\" -DESP_PLATFORM -D_POSIX_READER_WRITER_LOCKS -MD -MT esp-idf/canopennodeesp32/CMakeFiles/__idf_canopennodeesp32.dir/CANopen_LSS.c.obj -MF esp-idf\canopennodeesp32\CMakeFiles\__idf_canopennodeesp32.dir\CANopen_LSS.c.obj.d -o esp-idf/canopennodeesp32/CMakeFiles/__idf_canopennodeesp32.dir/CANopen_LSS.c.obj -c C:/Users/guill/OneDrive/Documents/firmware_updater_updated_repo/slave_init_bo/slave/components/canopennodeesp32/CANopen_LSS.c
C:/Users/guill/OneDrive/Documents/firmware_updater_updated_repo/slave_init_bo/slave/components/canopennodeesp32/CANopen_LSS.c:100:15: error: conflicting types for 'lss_store_cb'; have 'bool_t(void *, uint8_t,  uint16_t)' {aka 'unsigned int(void *, unsigned char,  short unsigned int)'}
  100 | static bool_t lss_store_cb(void *object, uint8_t id, uint16_t bitRate) {
      |               ^~~~~~~~~~~~
C:/Users/guill/OneDrive/Documents/firmware_updater_updated_repo/slave_init_bo/slave/components/canopennodeesp32/CANopen_LSS.c:66:13: note: previous declaration of 'lss_store_cb' with type '_Bool(void *, uint8_t,  uint16_t)' {aka '_Bool(void *, unsigned char,  short unsigned int)'}
   66 | static bool lss_store_cb(void *object, uint8_t id, uint16_t bitRate);
      |             ^~~~~~~~~~~~
ninja: build stopped: subcommand failed.
